# pro_gumeva

./: README.md  pyproject.toml
CODIGO/: cuaderno_descarga.ipynb  cuaderno_exploracion.ipynb
DATOS/: db_valle_cauca.csv
