[project]
name = "proyecto-gumevar"
version = "0.1.0"
description = "\"proyecto 1 de analitica de delitos del valle del cauca\""
authors = [
    {name = "sergioandres03",email = "sergio-an03@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
